checker/src/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__operation_directives__unknown_directive.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 1,
            column: 19,
            file: 0,
            builtin: false,
        },
        message: UnknownDirective {
            name: "unknown_dir",
        },
        additional_info: [],
    },
]
